[package]
rust-version = "1.76"
name = "idiom"
version = "0.4.8"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENCE",
    "README.MD"
]
license = "MIT"
description = "Simple low config editor supporting LSP and syntax highlighting."
repository = "https://github.com/Dah-phd/idiom"
keywords = ["terminal", "edit", "lsp", "text"]
categories = ["development-tools", "text-editors"]
authors = ["Daniel Nikolaev <toolsproed@gmail.com>"]

[dependencies]
clap = {version = "4.5.31", features = ["derive"]}
crossterm = "0.28.1"
lsp-types = "0.97.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
toml = "0.8.20"
tokio = { version="1.43.0", features=["rt", "macros", "rt-multi-thread", "process", "io-util"] }
tokio-util = { version="0.7.13", features = ["codec", "io"] }
tokio-stream = "0.1.17"
dirs = "6.0.0"
ignore = "0.4.23"
fuzzy-matcher = "0.3.7"
portable-pty = "0.9.0"
strip-ansi-escapes = "0.2.1"
bitflags = "2.9.0"
regex = "1.11.1"
thiserror = "2.0.11"
unicode-width = "0.2.0"
copypasta = "0.10.1"
notify = { version = "8.0.0", default-features = false, features = ["macos_kqueue"] }
logos = "0.15.0"
coolor = "1.0.0"
markdown = "0.3.0"

[target.'cfg(unix)'.dependencies]
xterm-query = "0.5.0"

[profile.dev]
debug = true

[profile.release]
strip = true
lto = true
