[package]
rust-version = "1.76"
name = "idiom"
version = "0.5.4"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENCE",
    "README.MD"
]
license = "MIT"
description = "Simple low config editor supporting LSP and syntax highlighting."
repository = "https://github.com/Dah-phd/idiom"
keywords = ["terminal", "edit", "lsp", "text"]
categories = ["development-tools", "text-editors"]
authors = ["Daniel Nikolaev <toolsproed@gmail.com>"]

[dependencies]
# intern crates
idiom_tui = "0.0.2"
# extern crates
bitflags = "2.9.1"
clap = {version = "4.5.39", features = ["derive"]}
coolor = "1.0.0"
copypasta = "0.10.2"
crossterm = "0.29.0"
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
ignore = "0.4.23"
logos = "0.15.0"
lsp-types = "0.97.0"
notify = { version = "8.0.0", default-features = false, features = ["macos_kqueue"] }
portable-pty = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
strip-ansi-escapes = "0.2.1"
thiserror = "2.0.12"
toml = "0.8.23"
tokio = { version="1.45.1", features=["rt", "macros", "rt-multi-thread", "process", "io-util"] }
tokio-util = { version="0.7.15", features = ["codec", "io"] }
tokio-stream = "0.1.17"
unicode-width = "0.2.0"
vt100 = "0.15.2"
lazy_static = "1.5.0"
pipeline = "0.5.0"

[target.'cfg(unix)'.dependencies]
xterm-query = "0.5.2"

[profile.dev]
debug = true

[profile.release]
strip = true
lto = true
