[package]
rust-version.workspace = true
name = "idiom_ui"
version = "0.0.1"
edition.workspace = true
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENCE",
    "README.MD"
]
license = "MIT"
description = "Simple low config editor supporting LSP and syntax highlighting."
repository = "https://github.com/Dah-phd/idiom"
keywords = ["terminal", "tui", "widgets", "crossterm"]
categories = []
authors = ["Daniel Nikolaev <toolsproed@gmail.com>"]

[features]
default = []
pty = [
    "vt100",
    "portable-pty",
    "anyhow",
    "tokio",
]

[dependencies]
tokio = { version="1.45.1", optional = true}
bitflags = "2.9.1"
copypasta = "0.10.2"
coolor = "1.0.0"
crossterm = "0.29.0"
serde_json = "1.0.140"
unicode-width = "0.2.0"
portable-pty = { version = "0.9.0", optional = true}
vt100 = { version="0.15.2", optional = true}
anyhow = {version = "1.0.98", optional = true}

[target.'cfg(unix)'.dependencies]
xterm-query = "0.5.2"

[profile.dev]
debug = true
